--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_SECRET=""
+APP_ENV=
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
