--- a/.env
+++ b/.env
@@ -29,3 +29,4 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL=""
 ###< doctrine/doctrine-bundle ###
+#Bonjour#
