--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,11 +18,13 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
-            guard:
-                authenticators:
-                    - App\Security\AppAuthenticator
+            form_login:
+                login_path: app_login
+                check_path: app_login
             logout:
                 path: app_logout
+                target: accueil
+                
                 # where to redirect after logout
                 # target: app_any_route
 
