--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
+            # guard:
+            # authenticators:
+            # - App\Security\AppAuthenticator
             form_login:
                 login_path: app_login
                 check_path: app_login
